Correcting layout issues with navigation

--- a/ptc_full_screen_top/ptc-full-screen-top.css
+++ b/ptc_full_screen_top/ptc-full-screen-top.css
@@ -2340,8 +2340,6 @@ body .layout--ptc-full-screen-top .l-header {
   align-self: flex-start;
   width: 100% !important;
   padding-top: 5px !important;
-  position: relative;
-  top: 0px !important;
 }
 
 @media (max-width: 600px) {
